[package]
name = "hashseq"
license = "MIT"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
description = "A BFT Sequence CRDT suitable for unpermissioned networks with unbounded number of collaborators."
keywords = [ "bft", "crdt", "distributed", "decentralized", "collaboration" ]
homepage = "https://github.com/davidrusu/hashseq"
repository = "https://github.com/davidrusu/hashseq"
documentation = "https://docs.rs/hashseq"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
blake3 = "1.5.0"
rand = "0.8.5"
associative_positional_list = "0.1.3"
hex = "0.4"

[features]
default = []

[dev-dependencies]
serde_json = "1.0.86"
flate2 = "1.0"
# indicatif = "0.17.1"
pprof = { version = "0.13", default-features = false, features = ["flamegraph", "frame-pointer"] }
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.5"
iced = { version = "0.10", features=["canvas", "tokio"]} # { git = "https://github.com/iced-rs/iced.git", rev = "7dd32f3be43c72e11dac5e07918e9ad6d36b6555" }
bincode = "1.3.3"
boa_engine = "0.20.0"
stats_alloc = "0.1.10"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "inserts"
harness = false