[package]
name = "hashseq"
license = "MIT"
authors = [ "David Rusu <davidrusu.me@gmail.com>" ]
description = "A BFT Sequence CRDT suitable for unpermissioned networks with unbounded number of collaborators."
keywords = [ "bft", "crdt", "distributed", "decentralized", "collaboration" ]
homepage = "https://github.com/davidrusu/hashseq"
repository = "https://github.com/davidrusu/hashseq"
documentation = "https://docs.rs/hashseq"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
blake3 = "1.5.0"
associative_positional_list = "0.1.3"
hex = "0.4"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.86"
flate2 = "1.0"
quickcheck = "1"
quickcheck_macros = "1"
criterion = "0.5"
iced = { version = "0.10", features=["canvas", "tokio"]} # { git = "https://github.com/iced-rs/iced.git", rev = "7dd32f3be43c72e11dac5e07918e9ad6d36b6555" }
stats_alloc = "0.1.10"

[profile.bench]
debug = true

[profile.release]
debug = true

[[bench]]
name = "inserts"
harness = false